--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = klarg
-version = 0.0.4
+version = 0.0.5
 author = Tomi Adenekan
 author_email = tominekan@outlook.com
 description = A simple command line argument parsing library
@@ -20,5 +20,10 @@ classifiers =
 
 [options]
 # Current directory
-packages = file: src
+package_dir = 
+    = src
+packages = find:
 python_requires = >=3.7
+
+[options.packages.find]
+where = src
